--- a/package.json
+++ b/package.json
@@ -9,15 +9,19 @@
     "build": "npx encore production"
   },
   "devDependencies": {
-    "@symfony/webpack-encore": "^1.17.0",
-    "webpack-notifier": "^1.15.0",
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
     "core-js": "^3.23.0",
-    "regenerator-runtime": "^0.13.7"
+    "postcss-loader": "^8.1.0",
+    "regenerator-runtime": "^0.13.7",
+    "sass": "^1.89.0",
+    "sass-loader": "^16.0.1",
+    "webpack-notifier": "^1.15.0"
   },
   "dependencies": {
     "@fullcalendar/core": "^6.1.8",
     "@fullcalendar/daygrid": "^6.1.8",
+    "@fullcalendar/interaction": "^6.1.8",
     "@fullcalendar/timegrid": "^6.1.8",
-    "@fullcalendar/interaction": "^6.1.8"
+    "@symfony/webpack-encore": "^5.1.0"
   }
 }
